# uploader

./: README.md  dockerfile  pyproject.toml  uploaderapp.serivce
uploader/: app.py  settings.py  wsgi.py
